<resources>
    <string name="app_name">Idretts App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_name_reg">First name</string>
    <string name="last_name_reg">Last name</string>
    <string name="age_reg">Age</string>
    <string name="email_reg">Email</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="password_reg">Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="please_check_user_agreement">Please check the user agreement</string>
    <string name="loginFailureTextInfo">Please make sure to fill out both fields with valid credential to sign in. Or Register as new user if you dont have an account.</string>
    <string name="loginFailureAlertTitle">Login..</string>
    <string name="registrationLocalError">Registration</string>
    <string name="registrationLocalErrorTextInfo">Please make sure to fill all the fields and try again</string>
    <string name="dbConnectionErrror">Database connection eror</string>
    <string name="dbConnectionErrorTextnfo">Please make sure to connect to internet to register and try again!</string>
    <string name="welcomeCoachTittle">Welcome coach!</string>
    <string name="wecomeCoachText">You are registered as the coach and the administrator</string>
    <string name="adminCodMismatched">Admincod mismatched!   Please try again</string>
    <string name="administratorNotSet">Adminstrator not set! please set administrator!</string>
    <string name="alert">Alert</string>
    <string name="setAdminFailured">Registration was not successfull, please make sure you are connected to internet and try again!.</string>
    <string name="tittleTrainerPostFieldEmpty">Trainer Activity</string>
    <string name="tittleTrainerPostFieldEmptyTextInfo">Some of the fields are not filled in. Please fill in all the fields and try again</string>
    <string name="activityDateHint">Date</string>
    <string name="activityTimeFromHint">Time from</string>
    <string name="activityTimeToHint">Time to</string>
    <string name="activityLocation">Location</string>
    <string name="activityDetailsSeparator">Activity Details</string>
    <string name="activityExtraInfoHint">...Extra info...</string>
    <string name="actStarts">Starts:</string>
    <string name="actEnds">Ends:</string>
    <string name="actLocation">Location:</string>
    <string name="signInFailureAlertTitle">Sign in</string>
    <string name="signInFailureAlertText">Sign in failured. Please check you typed right email and password, and make sure you are connected to internet, and try again.</string>
    <string name="progressDialogSignInTitle">Sign in</string>
    <string name="progressDialogSignInTextInfo">Signing in ...</string>
    <string name="progressDialogRegistrationTitle">Registration</string>
    <string name="progressDialogRegistrationTextInfo">Processing please wait...</string>
    <string name="adminPostingProgressDialogTitle">Posting</string>
    <string name="adminPostingProgressDialogTextInfo">Processing please wait...</string>
    <string name="activityRegistrationFailureTitle">Activity registration</string>
    <string name="activityRegistrationFailureTextIinfo">Activity has not been registered! Check your internet connection and try again.</string>
    <string name="fullactivityinfotopbar">TRAINING</string>
    <string name="fullactivityinfobuttombar">TRAINING</string>
    <string name="fullactivityinfo_title">fullactivityinfo title</string>
    <string name="fullactivityinfo_date">fullactivityinfo date</string>
    <string name="fullactivityinfo_start_end_time">fullactivityinfo start end time</string>
    <string name="showFullActivitiInfoEditBtn">Edit activity </string>
    <string name="activity_details">Activity Details</string>
    <string name="fullActivityShowStartS">Starts:</string>
    <string name="fullActivityShowEndS">Ends:</string>
    <string name="by">by</string>
    <string name="toastPostRegSuccess">Registered!</string>
    <string name="personal_activity_registration">Personal activity registration</string>
    <string name="type_of_activity">Type of activity</string>
    <string name="football_training">Football training</string>
    <string name="gymnastics">Gymnastics</string>
    <string name="activity_place">Activity place</string>
    <string name="training_intensity">Training intensity</string>
    <string name="userClickedTheirPostAlertText">Your post will be registered into the database withing 24 hour after you posted it and then will automatically be removed from here.  Choose \"Delete\" if you want to cancel registration. You can register personal training any time.</string>
    <string name="userClickedTheirPostAlertTitle">Personal training</string>
    <string name="playerPostAlertCANCELlabel">Cancel</string>
    <string name="playerPostAlertDELETElabel">Delete</string>
    <string name="personalTrainingTypeFootball">Football training</string>
    <string name="personalTrainingTypeGymnastic">Gymnastics</string>
    <string name="personalTrainingPlaceLocalOutside">Local gym/ outside</string>
    <string name="personalTrainingPlaceSchool">School</string>
    <string name="playerPostDeleteToast">Your post is deleted. You can add new post any time.</string>
    <string name="informationLogPlayerActivityTextInfo">Here every player registers their personal sport activity after they have completed, or before starting. All personal trainings will be logged to a logg book of the coach.</string>
    <string name="informationLogPlayerActivityTextTitle">Information</string>
    <string name="dialogMatchRecords">Match records</string>
    <string name="select_player">Select player</string>
    <string name="minutes_played">Minutes played:</string>
    <string name="red_card">Red Card:</string>
    <string name="yellow_card">Yellow Card:</string>
    <string name="perfect_passings">Passing:</string>
    <string name="player_data_registration">Player data registration</string>
    <string name="registerDialog">ADD RECORDS</string>
    <string name="profileNameLabe">Name:</string>
    <string name="profilePlayer_nr">Player NR:</string>
    <string name="player_age">Player Age:</string>
    <string name="post_deleted_deletepost">Post Deleted!</string>
    <string name="absentplayersregistered">Abcent players registered!</string>
    <string name="noChangesToBeRegisteredToast">There are no changes to be registrered!</string>
    <string name="playerAlreadyAbsent">Player already absent.</string>
    <string name="agreement">Agreement</string>
    <string name="userAgreementTitle">User Agreement</string>
    <string name="userAgreementText">By submitting your information you are confirming being a part of Høvik Idrettslag. The data collected by this application is used to track your progress as an athlete, and will at no point be available to people or organizations outside of Høvik IL. If you are under the age of 13, please check with your parent or legal guardian before agreeing to these terms. While using this application we expect you to behave with common courtesy when using the messaging service. Any unwanted actions can lead to the cancellation of your account in addition to notification of your parents/legal guardians. This application works best if you submit realistic efforts, so have fun and be truthful with your excersise.</string>
    <string name="football_activity">Football training:</string>
    <string name="editDialogTitle">Edit profile</string>
    <string name="statusUpdated">Status updated.</string>
    <string name="player_type">Player type:</string>
    <string name="nocahngesTosaveProfileEdit">No changes to save.</string>
    <string name="save_change">Save all</string>
    <string name="status">Status:</string>
    <string name="profileImageSaved">Profile image saved!</string>
    <string name="matchRecordsSelectUserToast">Please select a user first!</string>
    <string name="typeAmessageToSend">Type a message to send!</string>
    <string name="trainerPostNotifTitle">Trainer Post</string>
    <string name="trainerHasPostedNewPostText">Trainer has posted new post.</string>
    <string name="messageNotifText">has sent you a new message!</string>
    <string name="score">Score:</string>
    <string name="accidents">Fouls:</string>
    <string name="my_status">My Status:</string>
    <string name="my_player_nr">My player Nr:</string>
    <string name="my_status_topBar">My status</string>
    <string name="choose_who_to_chat_with">Choose who to chat with</string>
    <string name="title">Title:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="place">Place:</string>
    <string name="posted">Posted:</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="school">School</string>
    <string name="player_total_match_credentials">Player total match credentials</string>
    <string name="date_registered">Date registered:</string>
    <string name="player_type_profile">Player type:</string>
    <string name="minutes_played_label">Minutes played:</string>
    <string name="red_card_label">Red card:</string>
    <string name="activity_attendance_status">Activity attendance status</string>
    <string name="personal_activities">Solo training:</string>
    <string name="gymnastic_activity">Strength-training:</string>
    <string name="theory_meeting">Theory/meeting:</string>
    <string name="match_activity">Matches played:</string>
    <string name="accidents_label">Fouls:</string>
    <string name="total_attended">Total attended:</string>
    <string name="football_team_members">Team members</string>
    <string name="add_to_absent_lists">ADD TO ABSENT LISTS</string>
    <string name="intensity">Intensity</string>
    <string name="options">Options</string>
    <string name="campRecordsSelectUserToast">Please choose a player</string>
    <string name="coachNotif">Trainer activity</string>
    <string name="dialogCampRecords">Cup-activity</string>
    <string name="green_cards">Green card:</string>
    <string name="regiistration_requests">Registreringsforespørsel</string>
    <string name="reset_all_data_to_default_state">Reset all data</string>
    <string name="save_players_data">Save player data</string>
    <string name="coackckak">Trainer has posted new activity!</string>
    <string name="add_absence">add absence</string>
    <string name="add_match_records">add match records</string>
    <string name="local_gym_outside">Local gym/ outside</string>
    <string name="logg_out">Logg out</string>
    <string name="lagvisning">Team</string>
    <string name="player">Player</string>
    <string name="trener">Trainer</string>
    <string name="messages">Messages</string>
    <string name="my_profile">My Profile</string>
    <string name="team_activity">Team-activity</string>
    <string name="player_activity">Player-activity</string>
    <string name="team">Team</string>
    <string-array name="activity_type">
        <item>Football training</item>
        <item>Gym/Strength</item>
        <item>Theory/meeting</item>
        <item>Football match"</item>
    </string-array>
    <string name="exit_and_sign_out">Close and Exit</string>
</resources>
