<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    tools:context="com.example.gruppe43.idretts_app.application.view.fragments.PlayerActivityRegistration">


    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="20dp"

        android:textColor="#ffffff"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/personal_activity_registration"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView3Info" />
    <TextView
        android:id="@+id/textView3Info"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:textColor="@color/primary_darker"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center"
        android:text="Info"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6ab0ff"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/type_of_activity"
            android:background="#82bcff"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <CheckBox
            android:id="@+id/checkBoxFBtraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="#82bcff"
            android:text="@string/football_training"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/checkBox2Gymnstcs" />

        <CheckBox
            android:id="@+id/checkBox2Gymnstcs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gymnastics"
            android:background="#82bcff"
            android:layout_alignBaseline="@+id/checkBoxFBtraining"
            android:layout_alignBottom="@+id/checkBoxFBtraining"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/activity_place"
            android:background="#82bcff"
            android:gravity="center"
            android:layout_below="@+id/checkBoxFBtraining"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <CheckBox
            android:id="@+id/checkBox3LocalOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#82bcff"
            android:layout_marginTop="20dp"
            android:text="@string/local_gym_outside"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/checkBox4School" />

        <CheckBox
            android:id="@+id/checkBox4School"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#82bcff"
            android:text="@string/school"
            android:layout_alignBaseline="@+id/checkBox3LocalOut"
            android:layout_alignBottom="@+id/checkBox3LocalOut"
            android:layout_alignStart="@+id/checkBox2Gymnstcs"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#82bcff"
            android:gravity="center"
            android:text="@string/training_intensity"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/checkBox3LocalOut"
            android:layout_alignParentStart="true" />



        <TextView
            android:id="@+id/textView9Percent"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#82bcff"
            android:text="100%"
            android:textSize="30dp"
            android:layout_below="@+id/textView7"
            android:layout_alignParentEnd="true" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#82bcff"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/textView9Percent"
            android:layout_toStartOf="@+id/textView9Percent">

            <SeekBar
                android:id="@+id/seekBarIntensity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true" />

    </RelativeLayout>



    </RelativeLayout>
</RelativeLayout>