<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:padding="3dp"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinnerActivityType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true" />

            <EditText
                android:id="@+id/newActDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:textSize="17dp"
                android:ems="10"
                android:hint="@string/activityDateHint"
                android:inputType="date"
                android:singleLine="true"
                android:layout_below="@+id/spinnerActivityType"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:id="@+id/newActTimeFrom"
                android:textSize="17dp"
                android:layout_width="wrap_content"
                android:paddingLeft="8dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/newActDate"
                android:ems="10"
                android:hint="@string/activityTimeFromHint"
                android:inputType="time"
                android:singleLine="true" />

            <EditText
                android:id="@+id/newActLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:textSize="17dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/newActTimeTo"
                android:ems="10"
                android:hint="@string/activityLocation"
                android:inputType="text"
                android:layout_alignParentEnd="true" />

            <EditText
                android:id="@+id/newActTimeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_alignParentEnd="true"
                android:textSize="17dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/newActTimeFrom"
                android:ems="10"
                android:hint="@string/activityTimeToHint"
                android:inputType="time"
                android:singleLine="true" />

            <Spinner
                android:id="@+id/newActIntensitySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newActLocation"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="2dp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/activityDetailsSeparator"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" />
            <EditText
                android:id="@+id/newActTextInfo"
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="17dp"
                android:lineSpacingExtra="4dp"
                android:padding="5dp"
                android:hint="@string/activityExtraInfoHint"
                android:textColor="@color/black"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>